# livekit-python

./: .env.example  .gitignore  HIGHEST_LEVEL_ACHIEVED.md  PRODUCTION_DEPLOYMENT.md  README.md  RENDER_DEPLOYMENT_INSTRUCTIONS.md  RENDER_WORKER_FIX.md  agent.py  env.server  fix_permissions.py  kokoro_tts_optimization_deep_dive.md  render-absolute-paths.yaml  render-fixed.yaml  render-root.yaml  render-simple.yaml  render-unified.yaml  requirements.txt  simple_openai_test.py  start_unified_service.py  start_worker.py  test_basic.py  test_highest_level_summary.py  test_livekit_integration_summary.py  test_openai_tts_latency.py  test_phase2_phase3_integration.py  test_production_setup.py  test_render_deployment.py  test_render_simple.sh  test_setup.py  test_streaming_deepgram.py  test_tts_handshake.py  test_tts_latency.py  test_tts_streaming_fix.py  test_ultra_advanced_features.py  test_ultra_fast_tts.py  test_worker_env.py  tts_optimization_research.md  voice_ai_solo_developer_assessment.md  voice_optimization_analysis.md
app/: main.py  test_voice_pipeline.py
python-voice-agent/: .dockerignore  .env.example  .gitignore  .service_pids  CHANGELOG.md  CONTRIBUTING.md  COST_TRACKING_README.md  Dockerfile  INTERRUPTION_SYSTEM_SUMMARY.md  Procfile  README.md  _railway_agent.py  app.py  comprehensive_openai_test.py  debug.py  debug_token.py  debug_token_detailed.py  fly.toml  main.py  nixpacks.toml  phase2b_implementation_report.md  pyproject.toml  railway.json  render.yaml  render_probe.py  requirements-railway.txt  requirements.txt  requirements.txt.backup  sanity.py  start-complete-system.sh  start-production.sh  start-railway.sh  start-simple.sh  start_simple.py  start_unified_service.py  startup.py  stop.sh  test.html  test_audio_validation.py  test_client.py  (+23 more)
python-voice-agent/agent/: main.py
python-voice-agent/app/: main.py
python-voice-agent/archived_tts_services/: gemini_streaming_tts.py  openai_tts_service.py  streaming_gemini_tts.py  tts_service.py
python-voice-agent/docker/: Dockerfile.agent
python-voice-agent/docs/: API.md  DEPLOYMENT.md  INTERRUPTION_SYSTEM.md  PROJECT_STRUCTURE.md  ROADMAP_TO_EXCELLENCE.md
python-voice-agent/kokoro_fastapi_server/: README.md  requirements.txt  start.sh
python-voice-agent/scripts/: render-corrected.yaml  render-worker.yaml  render.yaml
python-voice-agent/simple_working_agent/: __init__.py  main.py  main_production.py
python-voice-agent/spiritual_voice_agent/: __init__.py  main.py  main_minimal.py
python-voice-agent/src/: requirements.txt  start_unified_service.py  startup.py
(+177 files in other folders)
